--- a/_data/works.yml
+++ b/_data/works.yml
@@ -1,2 +1,5 @@
 - title: SF創作講座 2018 梗概集
   url: https://fuji-nakahara.github.io/genron-sf-2018/
+
+- title: サイボーグ・クラスメイト
+  url: https://fuji-nakahara.github.io/cyborg-classmate/
