Add amakan account

--- a/_data/accounts.yml
+++ b/_data/accounts.yml
@@ -13,5 +13,8 @@
 - title: カクヨム
   url: https://kakuyomu.jp/users/fuji-nakahara
 
+- title: amakan
+  url: https://amakan.net/@fuji_nakahara
+
 - title: note
   url: https://note.mu/fuji_nakahara
