--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "moment": "^2.22.2",
     "rss-parser": "^3.4.3",
@@ -18,7 +19,7 @@
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
-    "@vue/eslint-config-standard": "^3.0.4",
+    "@vue/eslint-config-airbnb": "^3.0.4",
     "vue-template-compiler": "^2.5.17"
   }
 }
