--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "feedparser-promised": "^2.0.0",
     "moment": "^2.22.2",
-    "rss-parser": "^3.5.2",
     "vue": "^2.5.17",
     "vue-analytics": "^5.16.0"
   },
